# learn-fpga

./: .gitignore  LICENSE  NOTES.txt  NOTES_ECP5.txt  NOTES_ICEStick.txt  README.md
Attic/: femtorv32_fast_quark_95MHz.v  femtorv32_single_file.v.alu_state
Basic/Blinker/: blink.pcf  makeit.sh
Basic/FOMU_VGA/: fomu-pvt.pcf  makeit.sh  vga.v
Basic/FomuBlink/: blink.v  makeit.sh
Basic/GOWIN/: NOTES.txt
Basic/LedMatrix/: led_matrix.pcf
Basic/LedTerminal/: notes.txt
Basic/Oled/: oled.v
Basic/Serial/: makeit.sh  uart.v
Basic/ULX3S_SDRAM_hdmi/: README.md  SDRAM_HDMI_test.v  TMDS_encoder.v  makeit.sh
Basic/ULX3S_hdmi/: HDMI_clock.v  HDMI_test.config  HDMI_test.v  HDMI_test_DDR.v  README.md  TMDS_encoder.v  makeit.sh  ulx3s.lpf
Blinker/: blink.v  makeit.sh
FemtoRV/: LICENSE.md  Makefile  NOTES.txt  README.md  femtopll.v  femtorv32.v  femtosoc.lpf  femtosoc.pcf  femtosoc.v  icestick.pcf  makeit.sh  makeit_ecp5_evn.sh  makeit_icestick.sh  makeit_ulx3s.sh  reset.sh  spi_flash_reader.v  start.sh  start_terminal.sh  ulx3s.lpf
FemtoRV/BOARDS/: arty.xdc  arty35_symbiflow.mk  arty35_yosys_nextpnr.mk  arty_35.mk  arty_defs.v  bench.mk  cmod_a7.xdc  cmod_a7_yosys_nextpnr.mk  ecp5-evn.cfg  ecp5_evn.lpf  ecp5_evn.mk  fomu-evt2.pcf  fomu-evt3.pcf  fomu-hacker.pcf  fomu-pvt.pcf  fomu.mk  ice40hx8k_evb.mk  ice40hx8k_evb.pcf  ice4pi.mk  ice4pi.pcf  icebreaker.mk  icebreaker.pcf  icefeather.mk  icefeather.pcf  icestick.mk  icestick.pcf  icestick_mecrisp_quintus.mk  icestick_mecrisp_quintus.pcf  icesugar.mk  icesugar.pcf  icesugar_nano.mk  icesugar_nano.pcf  icezero.mk  icezero.pcf  icezero.pcf.long.fix-for-icetime.txt  pico_ice.mk  pico_ice.pcf  tangnano20k.cst  tangnano9k.cst  tangnano9k.mk  (+4 more)
FemtoRV/FIRMWARE/: Makefile  NOTES.txt  README.txt  bench_config.mk  config.sh  control.ld  femtorv32.ld  firmware.s  make_firmware.sh  makefile.inc  makeit.sh  nanorv.s
FemtoRV/FIRMWARE/LiteX/Doom/mc1-doom/src/: .clang-format  CMakeLists.txt  d_event.h  d_french.h  d_items.h  d_main.h  d_player.h  d_textur.h  d_ticcmd.h  doomdef.h  doomstat.c  doomtype.h  dstrings.c  dstrings.h  f_finale.c  f_wipe.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  i_main.c  i_net.h  i_sound_alsa.c  i_sound_dummy.c  i_system.h  i_video.h  i_video_fb.c  i_video_ncurses.c  i_video_sdl2.c  info.h  m_argv.c  m_cheat.h  m_fixed.c  m_misc.c  m_misc.h  m_random.c  m_random.h  m_swap.c  m_swap.h  (+37 more)
FemtoRV/RTL/: CSR_file.v  aligned_memory_access.v  branch_predicates.v  decoder.v  femtopll.v  femtorv32.v  femtosoc.v  femtosoc_bench.v  femtosoc_config.v  femtosoc_icestick_mecrisp_quintus.v  get_RAM_size.v  get_config.v  large_alu.v  mini_decoder.v  mini_femtorv32.v  register_file.v  sim_main.cpp  small_alu.v  utils.v
FemtoRV/SIM/: FPU_funcs.cpp  FPU_funcs.h  SSD1351.cpp  (+2 more)
LedMatrix/: led_matrix.v  makeit.sh  notes.txt
LedTerminal/: led_terminal.v  led_terminal.v.line_edit
Lib/: MAX7219.v  font_rom.v  uart.v
Libs/: MAX7219.v  SSD1351.v
LiteX/: README.md  ULX3S.md  litex-boards.md  makeit.sh  makeit_ulx3s.sh  orange_crab.md  radiona_ulx3s_ex.py
NanoRV/: NOTES.txt  makeit.sh  nanorv.pcf  nanorv.v  notes.txt  reset.sh  start.sh
Notes/: NOTES.txt  NOTES_ARTY.txt  NOTES_ICEBreaker.txt  NOTES_ICEStick.txt  NOTES_OrangeCrab.txt
Oled/: notes.txt  oled.pcf  oled.v
Serial/: serial.pcf  serial.v
Tools/: install_ice40_toolchain.sh
(+994 files in other folders)
